adjustment for performance test